--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development next dev ",
+    "dev": "next dev",
     "build": "next build",
+    "build:clean": "rimraf .next && npm cache clean --force && npm run build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
@@ -47,6 +48,7 @@
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-query-devtools": "^5.76.0",
     "@tanstack/react-query-persist-client": "^5.76.0",
+    "@types/pg": "^8.15.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -59,6 +61,7 @@
     "next": "^15.5.3",
     "next-qrcode": "^2.5.1",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-calendly": "^4.3.1",
