--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@react-aria/ssr": "^3.9.8",
     "@react-hook/resize-observer": "^2.0.2",
     "@react-hook/window-size": "^3.1.1",
+    "@supabase/supabase-js": "^2.57.4",
     "@tanstack/query-sync-storage-persister": "^5.76.0",
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-query-devtools": "^5.76.0",
