--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "functions": {
     "src/app/api/**/*.ts": {
       "runtime": "nodejs20.x"
+    },
+    "src/app/api/test-db/route.ts": {
+      "runtime": "nodejs20.x"
     }
   },
   "buildCommand": "next build",
